--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "serverless-easy-usage-plan-key",
-  "version": "0.0.15",
+  "version": "0.0.17",
   "description": "Helps generate UsagePlanKey using ApiKeyName.",
   "main": "src/index.js",
   "dependencies": {
@@ -13,9 +13,9 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+ssh://git@bitbucket.org/AsterKim/serverless-easy-usage-plan-key.git"
+    "url": "git+ssh://git@github.com/spooncast/serverless-easy-usage-plan-key.git"
   },
   "author": "Aster",
   "license": "ISC",
-  "homepage": "https://bitbucket.org/AsterKim/serverless-easy-usage-plan-key#readme"
+  "homepage": "https://github.com/spooncast/serverless-easy-usage-plan-key/blob/master/README.md"
 }
