--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "serverless-easy-usage-plan-key",
-  "version": "0.0.18",
+  "version": "0.0.19",
   "description": "Helps generate UsagePlanKey using ApiKeyName.",
   "main": "src/index.js",
   "dependencies": {
+    "aws-sdk": "^2.564.0",
     "chalk": "^2.4.2",
-    "aws-sdk": "^2.564.0"
+    "ramda": "^0.26.1"
   },
   "devDependencies": {},
   "scripts": {
