--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "devDependencies": {},
   "dependencies": {
     "aws-sdk": "^2.564.0",
+    "bluebird": "^3.7.1",
     "chalk": "^2.4.2",
     "ramda": "^0.26.1"
   }
